--- a/05-ionic-project/src/app/home/home.page.html
+++ b/05-ionic-project/src/app/home/home.page.html
@@ -1,20 +1,23 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button auto-hide="false"></ion-menu-button>
+    </ion-buttons>
     <ion-title>
-      Blank
+      Conference
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <img class="logo" src="../../assets/devfest_color_text_white.svg" alt="DevFest Logo">
+
+  <p class="dateConference">21/11/2021 - 22/11/2021</p>
+
+  <section>
+    <ion-button expand="block">Toutes les sessions</ion-button>
+    <ion-button expand="block">Tous les présentateurs</ion-button>
+  </section>
+
 </ion-content>
