--- a/05-ionic-project/src/app/session/session.component.html
+++ b/05-ionic-project/src/app/session/session.component.html
@@ -1,1 +1,20 @@
-<p>session works!</p>
+<ion-header [translucent]="true">
+    <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-menu-button auto-hide="false"></ion-menu-button>
+      </ion-buttons>
+      <ion-title>
+        Sessions
+      </ion-title>
+    </ion-toolbar>
+  </ion-header>
+
+<ion-content fullscreen>
+    <ion-list *ngFor="let session of this.sessions" detail=true>
+        <ion-item button (click)="showDetails(session.id)">
+          <ion-label>
+            <h3>{{session.title}}</h3>
+          </ion-label>
+        </ion-item>
+    </ion-list>
+</ion-content>
