--- a/05-ionic-project/src/app/folder/folder.page.scss
+++ b/05-ionic-project/src/app/folder/folder.page.scss
@@ -1,6 +1,9 @@
+ion-menu-button {
+  color: var(--ion-color-primary);
+}
+
 #container {
   text-align: center;
-
   position: absolute;
   left: 0;
   right: 0;
@@ -16,38 +19,10 @@
 #container p {
   font-size: 16px;
   line-height: 22px;
-
   color: #8c8c8c;
-
   margin: 0;
 }
 
 #container a {
   text-decoration: none;
-}
-
-.logo {
-  display: block;
-  width: 50%;
-  margin: 50px auto;
-}
-
-.dateConference {
-  text-align: center;
-  font-weight: bold;
-  margin: 20px 0;
-}
-
-section {
-  margin-top: 5em;
-  margin-bottom: 2.5em;
-}
-
-section:not(.full-width),
-.full-width > header {
-  padding: 0 50px;
-}
-
-ion-button {
-  margin-bottom: 20px;
 }
