fix back button sessions detail

--- a/05-ionic-project/src/app/session/session-detail/session-detail.component.html
+++ b/05-ionic-project/src/app/session/session-detail/session-detail.component.html
@@ -1,3 +1,11 @@
-<p>
-  session-detail works!
-</p>
+<ion-header translucent>
+  <ion-toolbar>
+    <ion-buttons slot="start" (click)="goBack()">
+      <ion-icon name="arrow-back-outline"></ion-icon> Back
+    </ion-buttons>
+    <ion-title>Test coucoucoucouc</ion-title>
+  </ion-toolbar>
+</ion-header>
+<ion-content fullscreen class="ion-padding">
+  
+</ion-content>
