--- a/05-ionic-project/src/app/session/session.page.html
+++ b/05-ionic-project/src/app/session/session.page.html
@@ -1,9 +1,22 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>session</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Sessions</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-list *ngIf="sessions" >
+    <ion-item *ngFor="let session of sessions" button routerLink="detail/{{session.id}}">
+      <ion-label>
+        <h3>{{session.title}}</h3>
+      </ion-label>
+    </ion-item>
+  </ion-list>
+  <div *ngIf="msg">
+    {{msg}}
+  </div>
 
 </ion-content>
