modal notes ok + binding ok

--- a/05-ionic-project/src/app/session/session-detail/session-detail.component.scss
+++ b/05-ionic-project/src/app/session/session-detail/session-detail.component.scss
@@ -4,6 +4,14 @@ ion-icon {
   font-size: 1.5em;
 }
 
+.session-title {
+  font-size: 1.3rem;
+}
+
+.note-button {
+  margin-right: 1rem;
+}
+
 ion-slides {
   height: 40%;
 }
