--- a/05-ionic-project/src/app/session/session-detail/session-detail.component.html
+++ b/05-ionic-project/src/app/session/session-detail/session-detail.component.html
@@ -3,10 +3,16 @@
     <ion-buttons slot="start" (click)="goBack()">
       <ion-icon name="arrow-back-outline"></ion-icon> Back
     </ion-buttons>
-    <ion-title>{{session?.title}}</ion-title>
+    <ion-buttons slot="end" (click)="presentModal()" class="note-button">
+      <ion-text color="primary">Take Note</ion-text>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 <ion-content fullscreen class="ion-padding">
+  <ion-label>
+    <p>Title</p>
+  </ion-label>
+  <h2 class="session-title">{{session?.title}}</h2>
     <ion-label>
       <p>Description</p>
     </ion-label>
