--- a/05-ionic-project/src/app/session/note-modal/note-modal.component.html
+++ b/05-ionic-project/src/app/session/note-modal/note-modal.component.html
@@ -11,5 +11,16 @@
   <section>
     <ion-button expand="block" (click)="saveNotes()">Save notes</ion-button>
   </section>
+  <section>
+    <ion-button expand="block" (click)="addPhotoToGallery()">Take Photo</ion-button>
+  </section>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6" *ngFor="let photo of photos">
+        <ion-img [src]="'data:image/png;base64,'+photo.filepath"></ion-img>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
 </ion-content>
